# GenomicRanges

./: .buildinfo  .coveragerc  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.txt  MANIFEST.in  README.md  authors.html  changelog.html  contributing.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.cfg  setup.py  tutorial.html
_modules/: index.html
_sources/: authors.md.txt  changelog.md.txt  index.md.txt  readme.md.txt  tutorial.md.txt
_static/: documentation_options.js
api/: genomicranges.html  genomicranges.io.html  modules.html
docs/: conf.py  index.md  requirements.txt  tutorial.md
perf/: README.md  genomicranges.ipynb  gr.R
tests/: conftest.py  test_SeqInfo.py  test_Seqinfo.py  test_gr_basic.py  test_gr_binnedAvg.py  test_gr_comparisons.py  test_gr_coverage.py  test_gr_flank.py  test_gr_init_seqnames.py  test_gr_initialize.py  test_gr_initialize_pandas.py  test_gr_initialize_polars.py  test_gr_inter_range_methods.py  test_gr_interrange.py  test_gr_intersect  test_gr_methods_basic.py  test_gr_methods_coverage.py  test_gr_methods_flank.py  test_gr_methods_nearest.py  test_gr_methods_other.py  test_gr_methods_resize.py  test_gr_methods_search.py  test_gr_misc.py  test_gr_other.py  test_gr_overlaps.py  test_gr_resize.py  test_gr_search.py  test_gr_seqInfo_trim.py  test_gr_set_ops.py  test_gr_subtract.py  test_gr_tiling.py  test_gr_to_grl.py  test_granges.py  test_granges_methods.py  test_grl_accessors.py  test_seqInfo.py  (+6 more)
(+46 files in other folders)
